# mcp-conductor

./: .env.example  .gitignore  README.md  mcp-conductor.config.json  pyproject.toml
docs/project-analysis/: 01-project-overview.md  02-requirements.md  03-module-analysis.md  04-tool-selection-flow.md  05-open-questions.md  06-usage-model.md  07-host-vs-gateway-server.md  08-client-primitives-and-safety.md  09-end-to-end-flow.md  10-trigger-and-routing-improvements.md  11-host-orchestrator-and-step-routing.md  README.md
docs/project-structure/: 01-project-architecture.md  02-final-architecture-diagram.md  03-dangerous-action-confirmation.md  04-error-handling-and-discovery-resilience.md  05-risk-policy-semantics.md  06-real-upstream-integration-prep.md  07-step-routing-and-agent-orchestrator-structure.md  README.md
question/: mcp-conductor-architecture.md  mcp-conductor-issues.md  mcp-conductor-recommendations.md
scripts/: smoke_learn_mcp.py
src/mcp_conductor/: __init__.py  cli.py  models.py  runtime.py  server.py
src/mcp_conductor/config/: __init__.py  env.py  (+2 more)
tests/integration/: test_in_memory_gateway_flow.py
tests/unit/: test_cli.py  test_config_loader.py  test_discovery_service.py  test_env_loader.py  test_execution_engine.py  test_exposure_planner.py  test_resource_templates.py  test_result_cache.py  test_risk_policy.py  test_routing_rules.py  test_routing_schemas.py  test_runtime_flow.py  test_runtime_lifecycle.py  test_sampled_router.py  test_server_tools.py  test_smoke_learn_mcp.py  test_source_language.py  test_step_routing.py  test_upstream_client.py
(+46 files in other folders)
