[project]
name = "mcp-conductor"
version = "0.1.0"
description = "MCP Gateway Server for routing and managing upstream MCP capabilities."
readme = "README.md"
requires-python = ">=3.13"
keywords = ["mcp", "model-context-protocol", "gateway", "fastmcp"]
dependencies = [
    "fastmcp>=3.3.1",
]

[project.scripts]
mcp-conductor = "mcp_conductor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_conductor"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
