[project]
name = "mcp-conductor"
version = "0.1.0"
description = "MCP Gateway Server for routing and managing upstream MCP capabilities."
readme = "README.md"
requires-python = ">=3.13"
keywords = ["mcp", "model-context-protocol", "gateway", "fastmcp"]
dependencies = [
    "fastmcp>=3.3.1",
    "jsonschema>=4.26.0",
]

[project.scripts]
mcp-conductor = "mcp_conductor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_conductor"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.6",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
